[package]
name = "amg_match"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Research iterative solver utilities"
repository = "https://github.com/aujxn/amg_match"
readme = "README.md"

#[lib]
#name = "amg_match"
#crate-type = ["cdylib"]

[dependencies]
nalgebra = { version = "0.33", features = ["rand"] }
nalgebra-sparse = { version = "0.10", features = ["io", "serde-serialize"] }
image = "0"
indexmap = "1"
rand = "0"
structopt = "0"
pretty_env_logger = "0"
log = "0"
strum = "0"
strum_macros = "0"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0"
plotters = "0.3.3"
regex = "1"
metis = { version = "0.2.1", features = ["vendored"] }
bytemuck = "1.21.0"
npyz = "0.8.3"

#[dependencies.nalgebra-lapack]
#version = "0"

[dev-dependencies]
test-generator = "0"
# TODO write lots of tests

[profile.dev]
codegen-units = 1
opt-level = 0
debug = true
overflow-checks = true
relocation-model = "pic"

[profile.release]
debug = true
codegen-units = 1
opt-level = 3
relocation-model = "pic"
