[package]
name = "amg_match"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Research iterative solver utilities"
repository = "https://github.com/aujxn/amg_match"
readme = "README.md"

[dependencies]
openblas-src = { version = "0.10", features = ["static", "lapacke"] }
sprs = { version = "0.11", features = ["serde", "multi_thread", "approx", "alga"] }
sprs-ldl = { version = "0.10", features = ["sprs_suitesparse_camd", "sprs_suitesparse_ldl"] }
suitesparse_camd_sys = { version = "0.1.1", default-features = false, features = ["static"] }
suitesparse_ldl_sys  = { version = "0.3.0", default-features = false, features = ["static"] }
approx = "0.5.1"
ndarray = { version = "0.16", features = ["serde", "rayon", "approx", "matrixmultiply-threading", "blas"] }
ndarray-linalg = { version = "0.17", features = ["openblas-static"] }
image = "0"
indexmap = "1"
rand = "0"
structopt = "0"
pretty_env_logger = "0"
log = "0"
strum = "0"
strum_macros = "0"
rayon = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
chrono = "0"
lazy_static = "1"
plotters = "0.3.3"
regex = "1"
metis = { version = "0.2.1", features = ["vendored"] }
bytemuck = "1.21.0"
npyz = "0.8.3"
ndarray-rand = "0.15.0"
faer = "0.21.4"
indicatif = {version = "*", features = ["rayon"]}
log4rs = "1.3.0"
num_cpus = "1.17.0"

[dev-dependencies]
test-generator = "0"
# TODO write lots of tests

[profile.dev]
codegen-units = 256
opt-level = 3
debug = true
debug-assertions = true
overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = 3
debug = true
